--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.8'
-
+# docker-compose.yml (в корне проекта!)
 services:
   postgres:
-    image: postgres:15-alpine
+    image: timescale/timescaledb:latest-pg15
     container_name: health_db
     restart: always
     environment:
@@ -13,7 +12,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./server/migrations:/docker-entrypoint-initdb.d
+      - ./server/migrations/init.sql:/docker-entrypoint-initdb.d/01-init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U health_user -d health_monitor"]
       interval: 10s
@@ -23,28 +22,20 @@ services:
   api:
     build:
       context: ./server
-      dockerfile: server/Dockerfile
-    container_name: health_api
+      dockerfile: Dockerfile
     restart: always
     ports:
-      - "8000:8000"
+      - "8000:8000"                 # ДОБАВЛЕНО — API доступен на localhost
+    env_file:
+      - .env                        # Читает .env
     environment:
-      DATABASE_URL: postgresql://health_user:health_pass123@postgres:5432/health_monitor
-      SECRET_KEY: "your-super-secret-jwt-key-change-in-production"
-      ALGORITHM: HS256
-      ACCESS_TOKEN_EXPIRE_MINUTES: 30
+      - DATABASE_URL=${DATABASE_URL}
+      - SECRET_KEY=${SECRET_KEY}
     depends_on:
       postgres:
         condition: service_healthy
     volumes:
-      - ./server:/app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
-
-  redis:
-    image: redis:7-alpine
-    container_name: health_redis
-    ports:
-      - "6379:6379"
+      - ./server:/app               # Hot-reload (можно убрать в prod)
 
 volumes:
   postgres_data:
